--- a/index.html
+++ b/index.html
@@ -21,15 +21,27 @@
         <img src="logo.gif">
         </h2>
       </div>
-     
+       <div class="col-sm-6 col-xs-12 main_div">
+         <label>Snapshot - </label>
+         <div id="result"></div>
+         <button onclick="check();" class="btn btn-success">Identify Image</button>
+       </div>
       <div class="col-sm-6 col-xs-12 main_div">
         <label>Webcam View - </label>
         <div id="camera"></div>
         <button onclick="take_Snapshot()" class= "btn btn-info">Capture Image</button>
       </div>
+      <div class="copy_right_footer">
+        Developed by Ansh Bhatnagar
+      </div>
     </center>
 
-
+    <div class="col-xs-12 footer_div">
+      <h4 class="col-sm-6 col-xs-12">
+        <img src="blub.gif">
+        <span id="object_name" ></span>
+      </h4>
+    </div>
     
 <script src="main.js"></script>
   </body>
